Add shell command "vim +PluginInstall +qall"
For Vundle/Vim plugin installation.

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -36,3 +36,4 @@
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
   - mkdir -p ~/.config
+  - vim +PluginInstall +qall
