--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -36,4 +36,4 @@
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
   - mkdir -p ~/.config
-  - vim +PluginInstall +qall
+  - [vim +PluginInstall +qall, Installing Vim plugins]
