--- a/.gitconfig
+++ b/.gitconfig
@@ -17,3 +17,4 @@
     amend = commit --amend
     graph = log --graph -10 --branches --remotes --tags  --format=format:'%Cgreen%h %Creset• %<(75,trunc)%s (%cN, %cr) %Cred%d' --date-order
     precommit = diff --cached --diff-algorithm=minimal -w
+    remotes = remote -v
