--- a/.inputrc
+++ b/.inputrc
@@ -1,5 +1,7 @@
 "\e[A": history-search-backward
-"\e[B": history-search-forward 
+"\e[B": history-search-forward
+"\e[C": forward-char
+"\e[D": backward-char
 set show-all-if-ambiguous on
-set completion-ignore-case on 
+set completion-ignore-case on
 set completion-query-items 10000
