gitconfig: add 'git sed' alias
From https://stackoverflow.com/a/9652183/157108

--- a/.gitconfig
+++ b/.gitconfig
@@ -18,6 +18,7 @@
     graph = log --graph -10 --branches --remotes --tags  --format=format:'%Cgreen%h %Creset• %<(75,trunc)%s (%cN, %cr) %Cred%d' --date-order
     precommit = diff --cached --diff-algorithm=minimal -w
     remotes = remote -v
+    sed = ! git grep -z --full-name -l '.' | xargs -0 sed -i -e
 [diff]
     compactionHeuristic = true
 [pager]
