--- a/.inputrc
+++ b/.inputrc
@@ -2,6 +2,7 @@
 "\e[B": history-search-forward
 "\e[C": forward-char
 "\e[D": backward-char
+"\C-l": clear-screen
 set show-all-if-ambiguous on
 set completion-ignore-case on
 set completion-query-items 10000
