Manage bash-completion directory, add kubectx and kubens completions

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -35,6 +35,9 @@
     ~/.gitconfig:
       force: true
       path: .gitconfig
+    ~/.local/share/bash-completion:
+      create: true
+      path: bash-completion
 - shell:
     - touch ~/.bash_history
     - touch ~/.lesshst
