--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -40,6 +40,7 @@
       force: true
       path: bash-completions
 - shell:
+    - rm -rf ~/.vim/bundle/
     - touch ~/.bash_history
     - touch ~/.lesshst
     - [git submodule -q update --init --recursive, Installing submodules]
